<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sale.BillDetailActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5">

        <com.yyy.fuzhuangpad.view.button.ButtonWithImg
            android:id="@+id/bw_exit"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            app:bwiSrc="@mipmap/common_exit"
            app:bwiTilte="@string/common_exit"
            app:bwiTitleColor="@color/default_text_color"
            app:bwiTitleSize="@dimen/sp_10" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sale_billing_detail_title"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/sp_12" />

        <com.yyy.fuzhuangpad.view.button.ButtonWithImg
            android:id="@+id/bw_submit"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_toLeftOf="@id/bw_save"
            app:bwiSrc="@mipmap/common_submit"
            app:bwiTilte="@string/common_submit"
            app:bwiTitleColor="@color/common_btn_search"
            app:bwiTitleSize="@dimen/sp_10" />

        <com.yyy.fuzhuangpad.view.button.ButtonWithImg
            android:id="@+id/bw_save"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_5"
            app:bwiSrc="@mipmap/common_save"
            app:bwiTilte="@string/common_save"
            app:bwiTitleColor="@color/common_btn_search"
            app:bwiTitleSize="@dimen/sp_10" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_5"
        android:paddingRight="@dimen/dp_5">

        <com.yyy.fuzhuangpad.view.search.SearchText
            android:id="@+id/se_code"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:seEditColor="@color/default_text_color"
            app:seEditSize="@dimen/sp_10"
            app:seTilte="@string/sale_billing_form_code"
            app:seTitleColor="@color/default_text_color"
            app:seTitleSize="@dimen/sp_10" />

        <com.yyy.fuzhuangpad.view.button.ButtonSelect
            android:id="@+id/bs_shop"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/se_code"
            app:bsContentColor="@color/white"
            app:bsContentSize="@dimen/sp_10"
            app:bsSrc="@mipmap/icon_arrow_down"
            app:bsTitle="@string/sale_billing_form_shop"
            app:bsTitleColor="@color/default_text_color"
            app:bsTitleSize="@dimen/sp_10" />

        <com.yyy.fuzhuangpad.view.button.ButtonSelect
            android:id="@+id/bs_customer"
            android:layout_width="@dimen/dp_160"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/bs_shop"
            app:bsContentColor="@color/white"
            app:bsContentSize="@dimen/sp_10"
            app:bsSrc="@mipmap/icon_arrow_down"
            app:bsTitle="@string/sale_billing_form_customer"
            app:bsTitleColor="@color/default_text_color"
            app:bsTitleSize="@dimen/sp_10" />

        <com.yyy.fuzhuangpad.view.button.ButtonWithImg
            android:id="@+id/bwi_add_customer"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_15"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_toRightOf="@id/bs_customer"
            android:background="@drawable/common_btn_search"
            app:bwiTilte="@string/sale_billing_detail_add"
            app:bwiTitleColor="@color/common_btn_search"
            app:bwiTitleSize="@dimen/sp_10" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_5"
        android:paddingRight="@dimen/dp_5">

        <com.yyy.fuzhuangpad.view.button.ButtonSelect
            android:id="@+id/bs_date"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:bsContentColor="@color/white"
            app:bsContentSize="@dimen/sp_10"
            app:bsSrc="@mipmap/common_date"
            app:bsTitle="@string/sale_billing_form_date"
            app:bsTitleColor="@color/default_text_color"
            app:bsTitleSize="@dimen/sp_10" />

        <com.yyy.fuzhuangpad.view.button.ButtonSelect
            android:id="@+id/bs_date_delivery"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:bsContentColor="@color/white"
            app:bsContentSize="@dimen/sp_10"
            app:bsSrc="@mipmap/common_date"
            app:bsTitle="@string/sale_billing_detail_delivery"
            app:bsTitleColor="@color/default_text_color"
            app:bsTitleSize="@dimen/sp_10" />

        <com.yyy.fuzhuangpad.view.button.ButtonSelect
            android:id="@+id/bs_sale"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:bsContentColor="@color/white"
            app:bsContentSize="@dimen/sp_10"
            app:bsSrc="@mipmap/icon_arrow_down"
            app:bsTitle="@string/sale_billing_form_saler"
            app:bsTitleColor="@color/default_text_color"
            app:bsTitleSize="@dimen/sp_10" />

        <com.yyy.fuzhuangpad.view.search.SearchText
            android:id="@+id/se_remark"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            app:seEditColor="@color/default_text_color"
            app:seEditSize="@dimen/sp_10"
            app:seTilte="@string/sale_billing_detail_remark"
            app:seTitleColor="@color/default_text_color"
            app:seTitleSize="@dimen/sp_10" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_three"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_5"
        android:paddingRight="@dimen/dp_5">

        <com.yyy.fuzhuangpad.view.search.SearchText
            android:id="@+id/st_num"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:seEditColor="@color/default_text_color"
            app:seEditSize="@dimen/sp_10"
            app:seTilte="@string/sale_billing_form_qty"
            app:seTitleColor="@color/default_text_color"
            app:seTitleSize="@dimen/sp_10" />

        <com.yyy.fuzhuangpad.view.search.SearchText
            android:id="@+id/st_total"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:seEditColor="@color/default_text_color"
            app:seEditSize="@dimen/sp_10"
            app:seTilte="@string/sale_billing_form_sum"
            app:seTitleColor="@color/default_text_color"
            app:seTitleSize="@dimen/sp_10" />
        <com.yyy.fuzhuangpad.view.button.ButtonWithImg
            android:id="@+id/bwi_add_style"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_15"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_toRightOf="@id/bs_customer"
            android:background="@drawable/common_btn_add"
            app:bwiTilte="@string/sale_billing_detail_add_style"
            app:bwiTitleColor="@color/red"
            app:bwiTitleSize="@dimen/sp_10" />
    </LinearLayout>
</LinearLayout>